# shell_exec

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
src/: argument.rs  environment.rs  errors.rs  execution.rs  lib.rs  script.rs  shell.rs
